--- a/blossom/templates/blossom/index.html
+++ b/blossom/templates/blossom/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>Show</title>
+    <title>Sekai Guild Events</title>
   </head>
   <body>
     <ul>
