--- a/blossom/templates/blossom/base.html
+++ b/blossom/templates/blossom/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>{%block title%}Sekai Guild Events{%endblock%}</title>
   </head>
+  {% load static %}
   <body>
     <div id = "content">
         {% block content %}{% endblock %}
